# swarm_deploy

./: .env.example  Dockerfile  README.md  command.sh  docker-compose.yaml  loki-config.yml  promtail-config.yml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py  views.py
grafana/datasources/: datasource.yml
prometheus/: prometheus.yml
